--- a/packages/core/index.html
+++ b/packages/core/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
-    <title>Voting Application</title>
+    <title>Create your poll</title>
 </head>
 <body>
     <div id="root"></div>
